--- a/src/app/features/product/_components/product/product.component.scss
+++ b/src/app/features/product/_components/product/product.component.scss
@@ -59,7 +59,7 @@
     margin-top: 15px;
 
     .product-header h4 {
-      font-size: 1.2rem;
+      font-size: 1rem;
       font-weight: bold;
       color: #333;
       white-space: nowrap;
@@ -74,7 +74,7 @@
     }
 
     .product-price {
-      font-size: 1rem;
+      font-size: .8rem;
       color: #000;
       font-weight: 600;
       margin: 8px 0;
