--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,3 +69,40 @@ html, body { height: 100vh; }
 }
 
 
+::ng-deep .mat-snack-bar-container.no-snackbar-bg {
+  background-color: transparent !important;
+  box-shadow: none !important;
+  padding: 0 !important;
+  border-radius: 0 !important;
+}
+
+.cdk-overlay-pane.mat-mdc-dialog-panel {
+  max-width: unset !important;
+  margin: 10px 0 !important;
+  max-height: 90vh !important;
+  overflow-y: hidden !important;
+}
+
+.mat-mdc-dialog-surface {
+  overflow-y: hidden !important;
+  border-radius: 2px !important;
+}
+
+.mat-mdc-snack-bar-container .mat-mdc-snackbar-surface {
+  background-color: transparent !important;
+  margin-right: 20px !important;
+  box-shadow: none !important;
+  padding: 0 !important;
+  border-radius: 0 !important;
+}
+
+.mat-mdc-dialog-surface {
+  background-color: #fff !important;
+  color: #222;
+  border-radius: 12px;
+  padding: 24px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+}
+
+
+
