currency change & a lot
forgot password implemented, currency change service

--- a/src/app/features/auth/_components/login/login.component.html
+++ b/src/app/features/auth/_components/login/login.component.html
@@ -21,7 +21,7 @@
       </ng-container>
 
       <ng-template #forgotPasswordBlock>
-        <app-change-password></app-change-password>
+        <app-forgot-password></app-forgot-password>
       </ng-template>
     </div>
   </ng-template>
