--- a/src/app/features/auth/_components/signin/signin.component.html
+++ b/src/app/features/auth/_components/signin/signin.component.html
@@ -90,7 +90,7 @@
 
 
     <p class="forgot-password">
-      <a (click)="onForgotPassword()">Change Password?</a>
+      <a (click)="onForgotPassword()">Forgot Password?</a>
     </p>
 
     <button type="submit" class="btn-signin" [disabled]="loginPasswordForm.invalid">
