--- a/src/app/features/settings/_components/user-settings/user-settings.component.html
+++ b/src/app/features/settings/_components/user-settings/user-settings.component.html
@@ -24,6 +24,13 @@
     </div>
 
     <div class="section">
+      <div class="section-title">Security</div>
+      <ul>
+        <li routerLink="change-password" routerLinkActive="active">Change Password</li>
+      </ul>
+    </div>
+
+    <div class="section">
       <div class="section-title">PREFERENCES</div>
       <ul>
         <li routerLink="notifications" routerLinkActive="active">Notifications</li>
