--- a/src/app/features/settings/_components/order-card/order-card.component.scss
+++ b/src/app/features/settings/_components/order-card/order-card.component.scss
@@ -95,18 +95,16 @@
 
 .primary-btn,
 .review-btn {
-  background-color: #682f12;
-  color: white;
+  background-color: transparent;
+  color: #682f12;
   padding: 8px 16px;
   border: none;
-  border-radius: 6px;
   font-weight: 600;
   cursor: pointer;
   margin-left: 10px;
 }
 
 .review-btn {
-  background-color: #f5f5f5;
-  color: #333;
-  border: 1px solid #ddd;
+  background-color: transparent;
+  color: #4d7ee9;
 }
