added empty-state in orders & added add/clear for wishlist items

--- a/src/app/features/cart/_components/cart-details/cart-details.component.html
+++ b/src/app/features/cart/_components/cart-details/cart-details.component.html
@@ -32,7 +32,7 @@
           (error)="onImageError($event)" />
 
         <div class="product-info">
-          <div class="brand-name">{{ getCategoryNameOfProduct(item.product?.category!) }}</div>
+          <div class="brand-name">{{ getCategoryNameOfProduct(item.product?.categoryId!) }}</div>
           <div class="product-title" (click)="navigateToProductPage(item.product!)">{{ item.product?.name }}</div>
 
           <!-- Quantity Selectors -->
