--- a/src/app/features/settings/_components/order-history/order-history.component.html
+++ b/src/app/features/settings/_components/order-history/order-history.component.html
@@ -27,7 +27,7 @@
   <!-- 🙅 No Orders -->
   <ng-template #noOrders>
     <div class="empty-state">
-      <img src="assets/images/no-orders.png" alt="No Orders" />
+      <img src="../../../../../assets/images/no-orders.jpeg" alt="No Orders" />
       <p>You haven’t placed any orders yet.</p>
     </div>
   </ng-template>
