--- a/src/app/features/settings/_components/order-history/order-history.component.scss
+++ b/src/app/features/settings/_components/order-history/order-history.component.scss
@@ -74,3 +74,10 @@
   100% { background-position: 400px 0; }
 }
 
+.empty-state {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
